Fixed mega menu z-index
This needs further work, perhaps a central place to manage z-indexing

--- a/resources/scss/layout/_header.scss
+++ b/resources/scss/layout/_header.scss
@@ -206,7 +206,7 @@ category:
 		display: grid;
 		padding: spacing(2) spacing(3);
 		grid-template-columns: auto 32px;
-		z-index: 1;
+		z-index: 5;
 
 		@include upto($header-break-2) {
 			overflow: hidden;
